# hscm

./: Hscm.cabal  LICENSE  README.md
src/Hscm/: Evaluate.hs  Main.hs  Parser.hs
test/: ParserSpec.hs
