name:             hscm
version:          0.0.1
license:          MIT
license-file:     LICENSE
author:           Marcin Dlugajczyk dlugajczykmarcin@gmail.com
maintainer:       Marcin Dlugajczyk dlugajczykmarcin@gmail.com
homepage:         none
cabal-version:    >= 1.14
build-type:       Simple

extra-source-files:
  README.md

-- source-repository head
--   type:     git
--   location: PREPO

-- flags

flag optimize
  description: apply compilation optimizations
  default:     True

-- build artifacts

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(optimize)
    ghc-options: -O2 -fspec-constr -funbox-strict-fields -fdicts-cheap
  build-depends:
    base >= 4 && < 6, parsec

  exposed-modules:
    Hscm.Parser

executable Hscm
  main-is:          Hscm/Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  build-depends:
    hscm,
    parsec,
    base >= 4 && < 6

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   src, test
  default-language: Haskell2010
  cpp-options:      -DTEST
  ghc-options:
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-unused-binds

  build-depends:
    hscm
   , parsec
   , base
   , hspec >= 1.3
   , QuickCheck

